# pampas

./: .gitignore  CMakeLists.txt  PAMPAS_MPU9250_CALIBRATION_CONFIG.txt  README.md  aguarai.h  aguarai_requirements.txt  anchoDePulso_Velocidad_xd.csv  anchoDePulso_Velocidad_xd2.csv  build  build-test.sh  build.sh  control.h  create_header.py  install  main.cpp  makefile  setup.sh  test  test.py
cli/: control.cpp  data_pulsewidth_speed.cpp  distance.cpp  pulse_width.cpp  pw_speed.cpp  read_pin.cpp  reset.py  speed.cpp  test.cpp
control_adap/: control.cpp  makefile
core/: Conversion.cpp  LowPass.cpp  Motor.cpp  PID.cpp  PulseWidth.cpp  Velocimeter.cpp  Writer.cpp  gpio.cpp
examples/: control.cpp  data_pulsewidth_speed.cpp  pulse_width.cpp  read_pin.cpp  test_control.cpp
include/: AdaptivePID.hpp  Conversion.h  Conversion.hpp  Derivative.hpp  Drive.clasic  Drive.h  Error.h  Exception.h  Exception.hpp  Governor.hpp  I2Cdev.h  Integral.hpp  LowPass.h  LowPass.hpp  MPU6050.hxx  MPU9250.h  Motor.h  Motor.hpp  PID.h  PID.hpp  PulseWidth.h  PulseWidth.hpp  Speed.h  Steer.h  Steer.hpp  Vehicle.h  Velocimeter.h  Velocimeter.hpp  Writer.h  Writer.hpp  Writter.h  _dev.h  control.h  dev.hpp  gpio.h  gpio.hpp  operations.h  operations.hpp
lolo/: control.cpp  data_pulsewidth_speed.cpp  makefile  pampas.cpp  pulse_width.cpp  speed.cpp
minipampas/: makefile  mpu.cpp  pampas.cpp
module/: Drive.cpp
pruebafd/: makefile  pampas.cpp
src/: Conversion.cpp  Drive.adap  Drive.cpp  Error.cpp  Exception.cpp  I2Cdev.cpp  LowPass.cpp  MPU6050.cpp  MPU9250.cpp  Motor.cpp  PID.cpp  (+9 more)
(+35 files in other folders)
